RESOLVED FIXED162558
std::unique_ptr deleter functions should not check if pointer is null
https://bugs.webkit.org/show_bug.cgi?id=162558
Summary std::unique_ptr deleter functions should not check if pointer is null
Michael Catanzaro
Reported 2016-09-26 07:22:03 PDT
std::unique_ptr deleter functions should not check if pointer is null, because std::unique_ptr already does this before calling the deleter.
Attachments
Patch (4.08 KB, patch)
2016-09-26 07:23 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2016-09-26 07:23:53 PDT
Alex Christensen
Comment 2 2016-09-26 08:24:19 PDT
Comment on attachment 289828 [details] Patch This is good. I feel like we could add another template parameter somewhere with the deleter function and unify all of these and the CairoUniquePtr into one template.
Michael Catanzaro
Comment 3 2016-09-26 09:21:48 PDT
Comment on attachment 289828 [details] Patch Hm, maybe... not in this patch though!
WebKit Commit Bot
Comment 4 2016-09-26 09:42:58 PDT
Comment on attachment 289828 [details] Patch Clearing flags on attachment: 289828 Committed r206377: <http://trac.webkit.org/changeset/206377>
WebKit Commit Bot
Comment 5 2016-09-26 09:43:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.