std::unique_ptr deleter functions should not check if pointer is null https://bugs.webkit.org/show_bug.cgi?id=162558

Reviewed by Alex Christensen.

std::unique_ptr already does this before calling the deleter.

Source/WebCore:

* platform/graphics/x11/XUniquePtr.h:
(WebCore::XPtrDeleter::operator()):
(WebCore::XPtrDeleter<XImage>::operator()):
(WebCore::XPtrDeleter<_XGC>::operator()):
(WebCore::XPtrDeleter<__GLXcontextRec>::operator()):

Source/WTF:

* wtf/efl/UniquePtrEfl.h:
* wtf/glib/GUniquePtr.h:


Canonical link: https://commits.webkit.org/180500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206377 268f45cc-cd09-0410-ab3c-d52691b4dbfc